--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ license=Apache-2.0
 author=Jonathan Dempsey
 maintainer=Jonathan Dempsey <JDWifWaf@gmail.com>
 sentence=An Arduino Library Specifically for the ESP32.
-paragraph=Handles communication without th Wire.h library. Adds config option.
+paragraph=Optional TwoWire reference. Handles Wire.h stop command correctly.
 category=Sensors
 url=https://github.com/WifWaf/VEML6075
 architectures=*
